deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nimbus-service
spec:
  progressDeadlineSeconds: 120
  replicas: 1
  selector:
    matchLabels:
      name: nimbus-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: nimbus-service
        team: nimbus
      name: nimbus-service
    spec:
      containers:
        - env:
            - name: ENVIRONMENT
              value: uat
          image: gcr.io/nimbus-non-prod/nimbus-service:latest
          imagePullPolicy: Always
          name: nimbus-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      imagePullSecrets:
        - name: docker-image-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nimbus-service
  name: nimbus-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    name: nimbus-service
  type: ClusterIP
