ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nimbus-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: nimbus-auth
              servicePort: 8080
